# warping

./: .gitignore  2do.txt  README.md  devlog.rtf
warp_gdi/: CMakeLists.txt  readme.txt  warp.aps  warp.rc
warp_gdi/src/: Resource.h  bitmap.hpp  demo.cpp  demo.h  text.cpp  text.h  vector.hpp  warp.hpp
